--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -60,7 +60,7 @@ block content
                     +e({tag: 'a'}).link Архитектурное проектирование
                     +e.submenu
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Индивидуальное проектирование
+                            +e.title Индивидуальное проектирование
                             +e({tag: 'a'}).link Поиск земельного участка
                             +e({tag: 'a'}).link Проект развития земельного участка
                             +e({tag: 'a'}).link СПОЗУ (схема планировочной организации зем.участка)
@@ -75,12 +75,12 @@ block content
                             +e({tag: 'a'}).link Проект реконструкции
                             +e({tag: 'a'}).link Комплексное проектирование дома (арх, конст, инженер)!!!!
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Дизайн экстерьера
+                            +e.title Дизайн экстерьера
                             +e({tag: 'a'}).link Дизайн-проект фасада
                             +e({tag: 'a'}).link Дизайн-проект ландшафтного дизайна
                             +e({tag: 'a'}).link Дизайн-проект развития площади
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Дизайн интерьера
+                            +e.title Дизайн интерьера
                             +e({tag: 'a'}).link Дизайн-проект интерьера здания/помещений стадия РД 
                             +e({tag: 'a'}).link  Дизайн-проект интерьера здания/помещений с 3D визуализацией
 
@@ -89,7 +89,7 @@ block content
                     +e({tag: 'a'}).link Инженерные изыскания
                     +e.submenu
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Инженерно-геодезические изыскания
+                            +e.title Инженерно-геодезические изыскания
                             +e({tag: 'a'}).link Топографические съемки 1:500
                             +e({tag: 'a'}).link Топографические съемки 1:2000
                             +e({tag: 'a'}).link Сопровождение СМР (геодезическая разбивка)
@@ -97,7 +97,7 @@ block content
                             +e({tag: 'a'}).link Обмерные работы
                             +e({tag: 'a'}).link Спутниковые (GPS) измерения
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Инженерно-геологические изыскания
+                            +e.title Инженерно-геологические изыскания
                             +e({tag: 'a'}).link Геологическое заключение
                 
                 +e.item
@@ -105,12 +105,12 @@ block content
                     +e({tag: 'a'}).link Межевание и кадастр
                     +e.submenu
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Межевание
+                            +e.title Межевание
                             +e({tag: 'a'}).link Межевание земельных участков
                             +e({tag: 'a'}).link  Изготовление межевого  плана
                             +e({tag: 'a'}).link  Установка и восстановление межевых знаков
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Кадастровые работы
+                            +e.title Кадастровые работы
                             +e({tag: 'a'}).link Получение кадастрового паспорта на земельный участок
                             +e({tag: 'a'}).link Получение схемы расположения земельного участка
                             +e({tag: 'a'}).link Постановка земельного участка на кадастровый учет
@@ -120,7 +120,7 @@ block content
                             +e({tag: 'a'}).link Изготовление технического паспорта дома
                             +e({tag: 'a'}).link Изготовление технического паспорта квартиры
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Юридическое сопровождение
+                            +e.title Юридическое сопровождение
                             +e({tag: 'a'}).link Оформление земельного участка в собственность
                             +e({tag: 'a'}).link Узаконивание земельного участка ( в судебном порядке)
                             +e({tag: 'a'}).link Получение разрешения на строительство
@@ -132,105 +132,138 @@ block content
                     +e({tag: 'a'}).link Комплексное подключение инженерных сетей
                     +e.submenu
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Водоснабжение
+                            +e.title Водоснабжение
                             +e({tag: 'a'}).link Система водоснабжения для ИЖС
                             +e({tag: 'a'}).link Система водоснабжения (линейные объекты)
                             +e({tag: 'a'}).link Система водоснабжения для многоквартирных домов
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Водоотведение
+                            +e.title Водоотведение
                             +e({tag: 'a'}).link Система водоотведения для ИЖС
                             +e({tag: 'a'}).link Система водоотведения (линейные объекты)
                             +e({tag: 'a'}).link Система водоотведения для многоквартирных домов
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Электричество
+                            +e.title Электричество
                             +e({tag: 'a'}).link Система электроснабжения для ИЖС
                             +e({tag: 'a'}).link Система электроснабжения (линейные объекты)
                             +e({tag: 'a'}).link Система электроснабжения для многоквартирных
                             +e({tag: 'a'}).link Система электроснабжения для многоквартирных домов
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Газификация
+                            +e.title Газификация
                             +e({tag: 'a'}).link Система газификации для ИЖС
                             +e({tag: 'a'}).link Система газификации (линейные объекты)
                             +e({tag: 'a'}).link Система газификации (многоквартирные дома)
                         +e.item
-                            +e({tag: 'a'}).link.menu__link_title Юридические услуги
+                            +e.title Юридические услуги
                             +e({tag: 'a'}).link Узаконивание инженерных сетей
                             +e({tag: 'a'}).link Оформление документов по всем инженерным сетям
 
                 +e.item
                     img(src="images/building.svg" height="25px")
-                    +e({tag: 'a'}).link Проектирование и расчеты инженерных сетей
-                    +e.submenu
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Расчеты по водоснабжению и водоотведению:
-                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения для ИЖС
-                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения многоквартирные дома
-                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения коммерческих объектов
-                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения для муниципальных объектов
-                            +e({tag: 'a'}).link Водохозяйственный паспорт для предприятий
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Расчеты по газоснабжению
-                            +e({tag: 'a'}).link Расчет МЧРГ для ИЖС
-                            +e({tag: 'a'}).link Расчет МЧРГ для многоквартирных домов
-                            +e({tag: 'a'}).link Расчет МЧРГ для ком.быт
-                            +e({tag: 'a'}).link Расчет МЧРГ для муниципальных организаций
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты водоснабжения
-                            +e({tag: 'a'}).link Проект наружных сетей водоснабжения для ИЖС
-                            +e({tag: 'a'}).link Проект внутриплощадочных сетей водоснабжения
-                            +e({tag: 'a'}).link Проект узла учета водоснабжения
-                            +e({tag: 'a'}).link Проект линейных объектов водоснабжения
-                            +e({tag: 'a'}).link Проект внутридомовой разводки
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты водоотведения
-                            +e({tag: 'a'}).link Проект наружных сетей водоотведения для ИЖС
-                            +e({tag: 'a'}).link Проект внутриплощадочных сетей водоотведения
-                            +e({tag: 'a'}).link Проект линейных объектов водоотведения
-                            +e({tag: 'a'}).link Проект внутридомовой разводки
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты газификации
-                            +e({tag: 'a'}).link Проект внутриплощадочных сетей
-                            +e({tag: 'a'}).link Проект изменения оборудования, узла учета, схемы газопровода
-                        //- br
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты электричества
-                            +e({tag: 'a'}).link Проект внутриплощадочных сетей
-                            +e({tag: 'a'}).link Проект линейных объектов
-                            +e({tag: 'a'}).link Проект внутридомовой разводки 
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты систем теплоснабжения
-                            +e({tag: 'a'}).link Проект тепловых сетей
-                            +e({tag: 'a'}).link Проект потребителей тепла
-                            +e({tag: 'a'}).link Проект систем отопления
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты систем вентиляции
-                            +e({tag: 'a'}).link Проект системы вентиляции (естественной, приточной, вытяжной)
-                            +e({tag: 'a'}).link  Проектирование воздухозаборных сооружений и устройств
-                            +e({tag: 'a'}).link  Проектирование вентиляторов и вентагрегаторов
-                            +e({tag: 'a'}).link  Проектирование воздуховодов
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты систем кондиционирования
-                            +e({tag: 'a'}).link Проект систем кондиционирования воздуха
-                            +e({tag: 'a'}).link Проект источников холода и воздухоохлаждения
-                            +e({tag: 'a'}).link Проект спец. оборудования
-                            +e({tag: 'a'}).link Проект комбинированной системы в и к
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты сетей связи
-                            +e({tag: 'a'}).link Проект линий связи
-                            +e({tag: 'a'}).link Проект внутренней связи
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты систем безопасности
-                            +e({tag: 'a'}).link Проект системы видеонаблюдения
-                            +e({tag: 'a'}).link Проект системы контроля доступа
-                            +e({tag: 'a'}).link Проект охранной сигнализации
-                        +e.item
-                            +e({tag: 'a'}).link.menu__link_title Проекты систем автоматизации и диспетчеризации
-                            +e({tag: 'a'}).link Проект системы автомат.управления технологическими процессами
-                            +e({tag: 'a'}).link Проект автоматизации  инженерных систем
-                            +e({tag: 'a'}).link Проект диспетчеризации инженерных систем
+                    +e({tag: 'a'}).link Инженерные сети
+                    +e.submenu.menu__submenu_big
+                        +b.big-menu
+                            +e.menu
+                                +e.mm
+                                    span Комплексное подключение<br>инженерных сетей
+                                    .arrow.arrow_right
+                                    +e.items
+                                        +e.item
+                                            +e.title Водоснабжение
+                                            +e({tag: 'a'}).link Система водоснабжения для ИЖС
+                                            +e({tag: 'a'}).link Система водоснабжения (линейные объекты)
+                                            +e({tag: 'a'}).link Система водоснабжения для многоквартирных домов
+                                        +e.item
+                                            +e.title Водоотведение
+                                            +e({tag: 'a'}).link Система водоотведения для ИЖС
+                                            +e({tag: 'a'}).link Система водоотведения (линейные объекты)
+                                            +e({tag: 'a'}).link Система водоотведения для многоквартирных домов
+                                        +e.item
+                                            +e.title Электричество
+                                            +e({tag: 'a'}).link Система электроснабжения для ИЖС
+                                            +e({tag: 'a'}).link  Система электроснабжения (линейные объекты)
+                                            +e({tag: 'a'}).link  Система электроснабжения для многоквартирных
+                                            +e({tag: 'a'}).link  Система электроснабжения для многоквартирных домов
+                                        +e.item
+                                            +e.title Газификация
+                                            +e({tag: 'a'}).link Система газификации для ИЖС
+                                            +e({tag: 'a'}).link Система газификации (линейные объекты)
+                                            +e({tag: 'a'}).link Система газификации (многоквартирные дома)
+                                        +e.item
+                                            +e.title Юридические услуги
+                                            +e({tag: 'a'}).link Узаконивание инженерных сетей
+                                            +e({tag: 'a'}).link Оформление документов по всем инженерным сетям 
+
+
+                                +e.mm
+                                    span Расчеты
+                                    .arrow.arrow_right
+                                    +e.items
+                                        +e.item
+                                            +e.title Расчеты по водоснабжению и водоотведению
+                                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения для ИЖС и многоквартирных домоы
+                                            +e({tag: 'a'}).link Баланс водопотребления и водоотведения коммерческих, муниципальных объектов
+                                            +e({tag: 'a'}).link Водохозяйственный паспорт для предприятий
+                                        +e.item
+                                            +e.title Расчеты по газоснабжению
+                                            +e({tag: 'a'}).link Расчет МЧРГ для ИЖС
+                                            +e({tag: 'a'}).link Расчет МЧРГ для многоквартирных домов
+                                            +e({tag: 'a'}).link Расчет МЧРГ для ком. быт
+                                        +e.item
+                                            +e.title Расчеты по электричеству
+                                            +e({tag: 'a'}).link Расчет 1
+                                            +e({tag: 'a'}).link Расчет 2
+                                            +e({tag: 'a'}).link Расчет 3
+                                        +e.item
+                                            +e.title Расчеты по  ОВиК
+                                            +e({tag: 'a'}).link Расчет 1
+                                            +e({tag: 'a'}).link Расчет 2
+                                            +e({tag: 'a'}).link Расчет 3
 
 
 
+
+
+
+
+
+                                +e.mm
+                                    span Проектирование
+                                    .arrow.arrow_right
+                                    +e.items
+                                        +e.item
+                                            +e.title Проект водоснабжения и водоотведения
+                                            +e({tag: 'a'}).link Проект наружных сетей водоснабжения и/или водоотведения для ИЖС
+                                            +e({tag: 'a'}).link Проект внутриплощадочных сетей водоснабжения и/или водоотведения
+                                            +e({tag: 'a'}).link Проект узла учета водоснабжения
+                                            +e({tag: 'a'}).link Проект линейных объектов водоснабжения и/или водоотведения
+                                            +e({tag: 'a'}).link Проект внутридомовой разводки 
+                                        +e.item
+                                            +e.title Проект газификации
+                                            +e({tag: 'a'}).link Проект внутриплощадочных сетей
+                                            +e({tag: 'a'}).link Проект изменения оборудования, узла учета, схемы газопровода
+                                        +e.item
+                                            +e.title Проект электричества
+                                            +e({tag: 'a'}).link Проект внутриплощадочных сетей
+                                            +e({tag: 'a'}).link Проект линейных объектов
+                                            +e({tag: 'a'}).link Проект внутридомовой разводки 
+
+                                        +e.item
+                                            +e.title Проект ОВиК
+                                            +e({tag: 'a'}).link Проект систем отопления
+                                            +e({tag: 'a'}).link Проект системы вентиляции (естественной, приточной, вытяжной)
+                                            +e({tag: 'a'}).link Проектирование воздуховодов
+                                            +e({tag: 'a'}).link Проект систем кондиционирования воздуха
+                                            +e({tag: 'a'}).link Проект комбинированной системы в и к
+
+                                        +e.item
+                                            +e.title Проект безопасности и автоматизации
+                                            +e({tag: 'a'}).link Проект системы видеонаблюдения
+                                            +e({tag: 'a'}).link Проект системы контроля доступа
+                                            +e({tag: 'a'}).link Проект охранной сигнализации
+                                            +e({tag: 'a'}).link Проект автоматизации  инженерных систем
+
+                            +e.content
+                                
 
 
                         
