--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -109,7 +109,6 @@
         &:hover
             background #364261
             .menu__submenu
-            .menu__general-submenu
                 visibility visible
                 opacity 1
                 //top 100%
@@ -156,17 +155,17 @@
         border 1px solid  rgb(232, 232, 232)
         box-shadow 0px 10px 15px 0px rgba(0, 0, 0, 0.14);
         padding 0 0 20px 0
-        // &_big
-        //     width 1160px
-        //     // visibility visible
-        //     // opacity 1
-        //     padding 0
+        &_big
+            width 1160px
+            // visibility visible
+            // opacity 1
+            padding 0
         .menu__item
             box-sizing border-box
             word-wrap break-word
             // margin-left 5px
             // margin-right 5px
-            max-width calc(1160px / 5)
+            // max-width calc(1160px / 5)
             padding 0
             margin 0
             width max-content
@@ -177,65 +176,104 @@
         .menu__link
             color #1f1f1f
             font-size 13px
-            padding 8px 20px
+            padding 5px 10px
             display block
             text-align left
             &:hover
                 background #cacaca
-            &_title
-                font-size 14px
-                font-weight 600
-                margin 20px 0 5px 0
-// .big-menu
-//     // display grid
-//     // grid-template-columns 270px auto 
-//     width 100%
-//     position relative
-//     &__menu
-//         border-right 1px solid #ddd
-//         width 270px
-//         height 100%
-//     // &__content
-//     //     
-//     &__items
-//         display flex
-//         flex-wrap wrap
-//         margin 0 5px 10px 5px
-//         // visibility hidden
-//         // position absolute
-//         position absolute
-//         top 0
-//         left 275px
-//         width 880px
-//     &__item
-//         box-sizing border-box
-//         word-wrap break-word
-//         margin-left 5px
-//         margin-right 5px
-//         width calc(25% - 10px)
-//         //padding 0
-//         //margin 0
-//         //width max-content
-//         background #fff
-//         //display inline-block
-//         &:hover
-//             background none
-//     &__link
-//         color #1f1f1f
-//         font-size 13px
-//         padding 4px
-//         display block
-//         text-align left
-//         margin-bottom 5px
-//         &:hover
-//             background #cacaca
-//         &_title
-//             font-size 14px
-//             font-weight 600
-//             margin 10px 0 5px 0
-//             &:hover
-//                 background none
+    &__title
+        font-size 14px
+        font-weight 600
+        margin 20px 0 5px 0
+        color #2b519e
+        padding 0 10px 
+.big-menu
+    // display grid
+    // grid-template-columns 270px auto
+    // display none
+    // visibility hidden
+    background #fff
+    &_active
+        // background #ddd
+        .big-menu__mm
+            &:hover
+            &_active
+                background #cacaca
+                .big-menu__items
+                    visibility visible !important
+                    opacity 1 !important
             
+    width 100%
+    position relative
+    &__menu
+        border-right 1px solid #ddd
+        width 270px
+        height 100%
+        padding 10px 0 
+    &__mm
+        padding 8px 10px
+        margin-bottom 10px
+        line-height 1.1em
+        justify-content space-between
+        color #1f1f1f
+        font-size 13px
+        cursor pointer
+        display flex
+        align-items center
+    &__items
+        display flex
+        flex-wrap wrap
+        margin 0 5px 10px 5px
+        visibility hidden
+        opacity 0
+        position absolute
+        top 0
+        left 275px
+        padding-top 10px
+        // width 880px
+        // &_active
+        //     visibility visible
+    &__item
+        box-sizing border-box
+        word-wrap break-word
+        margin-left 5px
+        margin-right 5px
+        width calc(25% - 10px)
+        //padding 0
+        //margin 0
+        //width max-content
+        //background #fff
+        //display inline-block
+        &:hover
+            background none
+    &__link
+        color #1f1f1f
+        font-size 13px
+        padding 5px 10px
+        display block
+        text-align left
+        margin-bottom 5px
+        &:hover
+            background #cacaca
+    &__title
+        font-size 14px
+        font-weight 600
+        margin 10px 0 5px 0
+        color #2b519e
+        padding 0 10px
+
+// .menu__submenu_big
+//     &:hover
+//         .big-menu
+//             background #ddd
+//             &__mm_active
+//                 color #f00
+//                 .big-menu__items
+//                     visibility visible
+//                     opacity 1
+
+
+
 .top-menu
     width 100%
     height 100%
