--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -172,7 +172,7 @@ block content
                                             +e({tag: 'a'}).link Система водоснабжения для ИЖС
                                             +e({tag: 'a'}).link Система водоснабжения (линейные объекты)
                                             +e({tag: 'a'}).link Система водоснабжения для многоквартирных домов
-                                        +e.item
+                                            //-+e.item
                                             +e.title Водоотведение
                                             +e({tag: 'a'}).link Система водоотведения для ИЖС
                                             +e({tag: 'a'}).link Система водоотведения (линейные объекты)
@@ -192,8 +192,6 @@ block content
                                             +e.title Юридические услуги
                                             +e({tag: 'a'}).link Узаконивание инженерных сетей
                                             +e({tag: 'a'}).link Оформление документов по всем инженерным сетям 
-
-
                                 +e.mm
                                     span Расчеты
                                     .arrow.arrow_right
@@ -220,12 +218,6 @@ block content
                                             +e({tag: 'a'}).link Расчет 3
 
 
-
-
-
-
-
-
                                 +e.mm
                                     span Проектирование
                                     .arrow.arrow_right
@@ -233,34 +225,105 @@ block content
                                         +e.item
                                             +e.title Проект водоснабжения и водоотведения
                                             +e({tag: 'a'}).link Проект наружных сетей водоснабжения и/или водоотведения для ИЖС
-                                            +e({tag: 'a'}).link Проект внутриплощадочных сетей водоснабжения и/или водоотведения
-                                            +e({tag: 'a'}).link Проект узла учета водоснабжения
-                                            +e({tag: 'a'}).link Проект линейных объектов водоснабжения и/или водоотведения
-                                            +e({tag: 'a'}).link Проект внутридомовой разводки 
+                                            +e({tag: 'a'}).link  Проект внутриплощадочных сетей водоснабжения и/или водоотведения
+                                            +e({tag: 'a'}).link  Проект узла учета водоснабжения
+                                            +e({tag: 'a'}).link  Проект линейных объектов водоснабжения и/или водоотведения
+                                            +e({tag: 'a'}).link  Проект внутридомовой разводки 
                                         +e.item
                                             +e.title Проект газификации
                                             +e({tag: 'a'}).link Проект внутриплощадочных сетей
                                             +e({tag: 'a'}).link Проект изменения оборудования, узла учета, схемы газопровода
-                                        +e.item
+                                            //-+e.item
                                             +e.title Проект электричества
                                             +e({tag: 'a'}).link Проект внутриплощадочных сетей
                                             +e({tag: 'a'}).link Проект линейных объектов
                                             +e({tag: 'a'}).link Проект внутридомовой разводки 
-
                                         +e.item
+                                            +e.title Проект теплоснабжения
+                                            +e({tag: 'a'}).link Проект тепловых сетей
+                                            +e({tag: 'a'}).link Проект потребителей тепла
+                                            //-+e.item
                                             +e.title Проект ОВиК
                                             +e({tag: 'a'}).link Проект систем отопления
-                                            +e({tag: 'a'}).link Проект системы вентиляции (естественной, приточной, вытяжной)
-                                            +e({tag: 'a'}).link Проектирование воздуховодов
-                                            +e({tag: 'a'}).link Проект систем кондиционирования воздуха
-                                            +e({tag: 'a'}).link Проект комбинированной системы в и к
-
+                                            +e({tag: 'a'}).link  Проект системы вентиляции (естественной, приточной, вытяжной)
+                                            +e({tag: 'a'}).link  Проектирование воздуховодов
+                                            +e({tag: 'a'}).link  Проект систем кондиционирования воздуха
+                                            +e({tag: 'a'}).link  Проект комбинированной системы в и к
                                         +e.item
                                             +e.title Проект безопасности и автоматизации
                                             +e({tag: 'a'}).link Проект системы видеонаблюдения
                                             +e({tag: 'a'}).link Проект системы контроля доступа
                                             +e({tag: 'a'}).link Проект охранной сигнализации
                                             +e({tag: 'a'}).link Проект автоматизации  инженерных систем
+
+                                +e.mm
+                                    span Строительно-монтажные работы
+                                    .arrow.arrow_right
+                                    +e.items
+                                        +e.item
+                                            +e.title Водоснабжение и водоотведение
+                                            +e({tag: 'a'}).link СМР линейных сетей
+                                            +e({tag: 'a'}).link СМР наружных сетей
+                                            +e({tag: 'a'}).link СМР внутриплощадочных сетей
+                                            +e({tag: 'a'}).link Монтаж внутридомовой разводки
+                                        +e.item
+                                            +e.title Газификация
+                                            +e({tag: 'a'}).link СМР линейных сетей
+                                            +e({tag: 'a'}).link СМР наружных сетей
+                                            +e({tag: 'a'}).link Монтаж  внутриплощадочных сетей
+                                            //-+e.item
+                                            +e.title Электричество
+                                            +e({tag: 'a'}).link СМР линейных сетей
+                                            +e({tag: 'a'}).link СМР наружных сетей
+                                            +e({tag: 'a'}).link СМР внутриплощадочных сетей
+                                            +e({tag: 'a'}).link Монтаж внутридомовой разводки
+                                        +e.item
+                                            +e.title ОВиК
+                                            +e({tag: 'a'}).link Монтаж тепловых сетей
+                                            +e({tag: 'a'}).link Монтаж систем  отопления
+                                            +e({tag: 'a'}).link Монтаж  системы вентиляции
+                                            +e({tag: 'a'}).link Монтаж воздухозаборных сооружений и устройств
+                                            +e({tag: 'a'}).link Монтаж воздуховодов
+                                            +e({tag: 'a'}).link Монтаж систем кондиционирования воздуха
+                                            +e({tag: 'a'}).link Монтаж  комбинированной системы вентиляции и кондиционирования    
+                                        +e.item
+                                            +e.title Система безопасности и автоматизации
+                                            +e({tag: 'a'}).link Монтаж системы видеонаблюдения
+                                            +e({tag: 'a'}).link Монтаж системы контроля доступа
+                                            +e({tag: 'a'}).link Монтаж охранной сигнализации
+                                            +e({tag: 'a'}).link Монтаж автоматизации  инженерных систем
+                                
+                                +e.mm
+                                    span Автономные инженерные системы
+                                    .arrow.arrow_right
+                                    +e.items
+                                        +e.item
+                                            +e.title Водоснабжение
+                                            +e({tag: 'a'}).link Артезианские скважины  водоснабжения
+                                            +e({tag: 'a'}).link Кессоны
+                                            +e({tag: 'a'}).link Автономные системы очистки питьевой воды
+                                            +e({tag: 'a'}).link Системы сбора, очистки и использования дождевой воды
+                                        +e.item
+                                            +e.title Канализация
+                                            +e({tag: 'a'}).link Септики
+                                            +e({tag: 'a'}).link Локальные очистные сооружения
+                                        +e.item
+                                            +e.title Газификация
+                                            +e({tag: 'a'}).link Газголдеры
+                                        +e.item
+                                            +e.title Тепло и энергоснабжение
+                                            +e({tag: 'a'}).link Автономные источники тепла и энергоснабжения;
+                                            +e({tag: 'a'}).link Нетрадиционные источники энергии: солнечной, энергии ветра, биогаза и т. д.
+
+
+
+
+                                
+
+
+
+
+
 
                             +e.content
                                 
