--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -180,10 +180,10 @@
             display block
             text-align left
             &:hover
-                background #cacaca
+                background #e6e3e3
     &__title
-        font-size 14px
-        font-weight 600
+        font-size 13px
+        font-weight 700
         margin 20px 0 5px 0
         color #2b519e
         padding 0 10px 
@@ -198,7 +198,7 @@
         .big-menu__mm
             &:hover
             &_active
-                background #cacaca
+                background #e6e3e3
                 .big-menu__items
                     visibility visible !important
                     opacity 1 !important
@@ -209,14 +209,14 @@
         border-right 1px solid #ddd
         width 270px
         height 100%
-        padding 10px 0 
+        padding 15px 0 
     &__mm
         padding 8px 10px
         margin-bottom 10px
         line-height 1.1em
         justify-content space-between
         color #1f1f1f
-        font-size 13px
+        font-size 14px
         cursor pointer
         display flex
         align-items center
@@ -230,6 +230,7 @@
         top 0
         left 275px
         padding-top 10px
+        cursor auto
         // width 880px
         // &_active
         //     visibility visible
@@ -249,15 +250,16 @@
     &__link
         color #1f1f1f
         font-size 13px
-        padding 5px 10px
+        padding 4px 10px
         display block
         text-align left
-        margin-bottom 5px
+        margin-bottom 2px
+        cursor pointer
         &:hover
-            background #cacaca
+            background #e6e3e3
     &__title
-        font-size 14px
-        font-weight 600
+        font-size 13px
+        font-weight 700
         margin 10px 0 5px 0
         color #2b519e
         padding 0 10px
