--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -53,10 +53,11 @@ block content
                             +e.wrap
                                 +e.icon 
                                 +e.text Ростов-на-Дону <br>ул.Текучева, 23, эт. 3
+        .fixed_blur
         +b.menu
             .container
                 +e.item
-                    img(src="images/building.svg" height="25px")
+                    img(src="images/architect.png" height="25px")
                     +e({tag: 'a'}).link Архитектурное проектирование
                     +e.submenu
                         +e.item
@@ -73,7 +74,7 @@ block content
                             +e({tag: 'a'}).link Охрана окружающей среды
                             +e({tag: 'a'}).link Проект организации строительства
                             +e({tag: 'a'}).link Проект реконструкции
-                            +e({tag: 'a'}).link Комплексное проектирование дома (арх, конст, инженер)!!!!
+                            +e({tag: 'a'}).link Комплексное проектирование дома
                         +e.item
                             +e.title Дизайн экстерьера
                             +e({tag: 'a'}).link Дизайн-проект фасада
@@ -85,7 +86,7 @@ block content
                             +e({tag: 'a'}).link  Дизайн-проект интерьера здания/помещений с 3D визуализацией
 
                 +e.item
-                    img(src="images/building.svg" height="25px")
+                    img(src="images/geodesy.svg" height="26px")
                     +e({tag: 'a'}).link Инженерные изыскания
                     +e.submenu
                         +e.item
@@ -101,7 +102,7 @@ block content
                             +e({tag: 'a'}).link Геологическое заключение
                 
                 +e.item
-                    img(src="images/building.svg" height="25px")
+                    img(src="images/land-survey.png" height="21px")
                     +e({tag: 'a'}).link Межевание и кадастр
                     +e.submenu
                         +e.item
@@ -126,39 +127,9 @@ block content
                             +e({tag: 'a'}).link Получение разрешения на строительство
                             +e({tag: 'a'}).link Регистрация права собственности на объект недвижимости
                             +e({tag: 'a'}).link Узаконивание объекта строительства (в судебном порядке)
-                
-                +e.item
-                    img(src="images/building.svg" height="25px")
-                    +e({tag: 'a'}).link Комплексное подключение инженерных сетей
-                    +e.submenu
-                        +e.item
-                            +e.title Водоснабжение
-                            +e({tag: 'a'}).link Система водоснабжения для ИЖС
-                            +e({tag: 'a'}).link Система водоснабжения (линейные объекты)
-                            +e({tag: 'a'}).link Система водоснабжения для многоквартирных домов
-                        +e.item
-                            +e.title Водоотведение
-                            +e({tag: 'a'}).link Система водоотведения для ИЖС
-                            +e({tag: 'a'}).link Система водоотведения (линейные объекты)
-                            +e({tag: 'a'}).link Система водоотведения для многоквартирных домов
-                        +e.item
-                            +e.title Электричество
-                            +e({tag: 'a'}).link Система электроснабжения для ИЖС
-                            +e({tag: 'a'}).link Система электроснабжения (линейные объекты)
-                            +e({tag: 'a'}).link Система электроснабжения для многоквартирных
-                            +e({tag: 'a'}).link Система электроснабжения для многоквартирных домов
-                        +e.item
-                            +e.title Газификация
-                            +e({tag: 'a'}).link Система газификации для ИЖС
-                            +e({tag: 'a'}).link Система газификации (линейные объекты)
-                            +e({tag: 'a'}).link Система газификации (многоквартирные дома)
-                        +e.item
-                            +e.title Юридические услуги
-                            +e({tag: 'a'}).link Узаконивание инженерных сетей
-                            +e({tag: 'a'}).link Оформление документов по всем инженерным сетям
 
                 +e.item
-                    img(src="images/building.svg" height="25px")
+                    img(src="images/engineer.png" height="24px")
                     +e({tag: 'a'}).link Инженерные сети
                     +e.submenu.menu__submenu_big
                         +b.big-menu
@@ -315,18 +286,28 @@ block content
                                             +e({tag: 'a'}).link Автономные источники тепла и энергоснабжения;
                                             +e({tag: 'a'}).link Нетрадиционные источники энергии: солнечной, энергии ветра, биогаза и т. д.
 
-
-
-
-                                
-
-
-
-
-
-
                             +e.content
-                                
+                                                 
+                +e.item
+                    img(src="images/gnb.png" height="26px")
+                    +e({tag: 'a'}).link Бестраншейные технологии
+                    +e.submenu
+                        +e.item
+                            +e.title ГНБ
+                            +e({tag: 'a'}).link ГНБ в стесненных условиях города
+                            +e({tag: 'a'}).link ГНБ в открытой местности
+                            +e({tag: 'a'}).link ГНБ в различных грунтах
+                        +e.item
+                            +e.title Управляемый прокол грунта
+                            +e({tag: 'a'}).link Прокол из колодца
+                            +e({tag: 'a'}).link Прокол из приямка
+                            +e({tag: 'a'}).link Прокол из подвального помещения
+                        +e.item
+                            +e.title Санация
+                            +e({tag: 'a'}).link Санация чугунных и пластиковых труб
+                            +e({tag: 'a'}).link Релайнинг/Реновация
+
+
 
 
                         
